--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,16 @@
   "manifest_version": 2,
 
   "name": "Github Trending",
+  "author": "Anmol Mago",
   "description": "This unofficial extention shows the top trending github repos as provided by http://github.com/trending",
-  "version": "1.0",
+  "incognito": "split",
+  "version": "1.0.0",
 
   "chrome_url_overrides" : {
     "newtab": "index.html"
   },
   "permissions": [
         "storage",
-	"http://*.anmolmago.com/"
+        "http://*.anmolmago.com/"
     ]
 }
