--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
   "author": "Anmol Mago",
   "description": "This unofficial extention shows the top trending github repos as provided by http://github.com/trending",
   "incognito": "split",
-  "version": "1.1",
+  "version": "1.2",
     
   "icons": { 
-      "16": "assets/icon16.png",
-      "48": "assets/icon48.png",
-      "128": "assets/icon128.png"
+      "16": "assets/images/icon16.png",
+      "48": "assets/images/icon48.png",
+      "128": "assets/images/icon128.png"
   },
 
   "chrome_url_overrides" : {
